--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -118,7 +118,7 @@
     </mat-card-header>
 
     <mat-card-actions class="center">
-      <button mat-button>
+      <button mat-button (click)="seeUser()">
         <mat-icon>streetview</mat-icon>
         &nbsp; 
         Ver Usuarios
