--- a/src/app/request-credentials/request-credentials.component.html
+++ b/src/app/request-credentials/request-credentials.component.html
@@ -27,10 +27,10 @@
         </div>
 
         <div class="row justify-content-xs-center">
-          <div class="col-xs-12 center">
+          <div class="col-xs-12">
             <mat-form-field class="full-width" color="accent">
-              <mat-label id="nombre">Nombre</mat-label>
-              <input matInput [(ngModel)]="nombre" name="nombre" type="text" required>
+              <mat-label id="nombre">Nombres</mat-label>
+              <input matInput [(ngModel)]="nombre" type="text" required [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>person_outline</mat-icon>
             </mat-form-field>
           </div>
@@ -39,8 +39,8 @@
         <div class="row justify-content-xs-center">
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
-              <mat-label id="apellido">Apellido</mat-label>
-              <input matInput [(ngModel)]="apellido" name="apellido" type="text" required>
+              <mat-label id="apellido">Apellidos</mat-label>
+              <input matInput [(ngModel)]="apellido" type="text" required [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>spellcheck</mat-icon>
             </mat-form-field>
           </div>
@@ -50,7 +50,7 @@
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="email">Email (correo electrónico)</mat-label>
-              <input matInput [(ngModel)]="email" name="email" type="text" required>
+              <input matInput [(ngModel)]="email" type="text" required [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>email</mat-icon>
             </mat-form-field>
           </div>
@@ -59,7 +59,7 @@
         <div class="col-xs-12 center">
           <mat-form-field class="full-width" color="accent">
             <mat-label id="telefono">Teléfono de contacto (preferiblemente celular)</mat-label>
-            <input matInput [(ngModel)]="telefono" name="telefono" type="text" required>
+            <input matInput [(ngModel)]="telefono" type="text" required [ngModelOptions]="{standalone: true}">
             <mat-icon matSuffix>call</mat-icon>
           </mat-form-field>
         </div>
@@ -68,7 +68,7 @@
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="ciudad">Ciudad</mat-label>
-              <input matInput [(ngModel)]="ciudad" name="ciudad" type="text">
+              <input matInput [(ngModel)]="ciudad" type="text" [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>public</mat-icon>
             </mat-form-field>
           </div>
@@ -76,7 +76,7 @@
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="direccion">Dirección</mat-label>
-              <input matInput [(ngModel)]="direccion" name="direccion" type="text">
+              <input matInput [(ngModel)]="direccion" type="text" [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>edit_location</mat-icon>
             </mat-form-field>
           </div>
@@ -84,12 +84,42 @@
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="info">Info extra sobre tí (grado, cargo, intereses, etc.)</mat-label>
-              <textarea matInput rows="2" [(ngModel)]="info"></textarea>
+              <textarea matInput rows="2" [(ngModel)]="info" [ngModelOptions]="{standalone: true}"></textarea>
               <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
             </mat-form-field>
           </div>
 
           <div class="col-xs-12 center">
+            <span class="subtitulo2">Prueba que no eres un robot:</span>
+            <br/>
+            Resuelve esta operación matemática
+          </div>
+          
+          <div class="col-xs-12 center">
+            <div style="display: inline; font-size: 40px;">
+              <mat-icon matSuffix style="font-size: 40px;">{{ op1 }}</mat-icon>
+              &nbsp;&nbsp;
+              +
+              &nbsp;&nbsp;
+              <mat-icon matSuffix style="font-size: 40px;">{{ op2 }}</mat-icon> 
+              &nbsp;&nbsp;
+              = 
+            </div>
+            <div style="display: inline;">
+              <mat-form-field color="accent" style="width: 40px; font-size: 18px;">
+                <input matInput [(ngModel)]="operacion" type="number" required [ngModelOptions]="{standalone: true}">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="col-xs-12 footerApp">
+            *Al registrarse en nuestro sistema, su Usuario quedará en estado 'INACTIVO' 
+            hasta que uno de nuestros Administradores avale su registro. 
+            Una vez aprobado, recibirá una notificación de parte nuestra con su contraseña temporal.
+          </div>
+
+          <div class="col-xs-12 center">
+            <br/>
             <button mat-raised-button (click)="solicitarCuenta()" color="accent"><b>Solicitar cuenta en Profit Takers</b></button>
           </div>
 
