--- a/src/app/admin/create-account/create-account.component.css
+++ b/src/app/admin/create-account/create-account.component.css
@@ -1,5 +1,6 @@
-/* Border */
+/* Border * /
 .mat-form-field-type-mat-input, .mat-select {
   border-bottom: 1px #428d39;
   border-bottom-style: solid;
 }
+*/
