--- a/src/app/admin/create-user/create-user.component.html
+++ b/src/app/admin/create-user/create-user.component.html
@@ -30,7 +30,7 @@
         <div class="row">
           <div class="col-xs-12">
             <mat-label id="nombre">Elija un tipo de Usuario</mat-label><br/>
-            <mat-radio-group aria-label="Elija un tipo de Usuario">
+            <mat-radio-group aria-label="Elija un tipo de Usuario" [(ngModel)]="rol" [ngModelOptions]="{standalone: true}">
               <mat-radio-button value="i">Inversionista</mat-radio-button>
               <mat-radio-button value="e">Estudiante</mat-radio-button>
               <mat-radio-button value="a">Ambos</mat-radio-button>
@@ -45,8 +45,8 @@
         <div class="row justify-content-xs-center">
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
-              <mat-label id="nombre">Nombre</mat-label>
-              <input matInput [(ngModel)]="nombre" name="nombre" type="text" required>
+              <mat-label id="nombre">Nombres</mat-label>
+              <input matInput [(ngModel)]="nombre" type="text" required [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>person_outline</mat-icon>
             </mat-form-field>
           </div>
@@ -55,8 +55,8 @@
         <div class="row justify-content-xs-center">
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
-              <mat-label id="apellido">Apellido</mat-label>
-              <input matInput [(ngModel)]="apellido" name="apellido" type="text" required>
+              <mat-label id="apellido">Apellidos</mat-label>
+              <input matInput [(ngModel)]="apellido" type="text" required [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>spellcheck</mat-icon>
             </mat-form-field>
           </div>
@@ -66,7 +66,7 @@
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="email">Email (correo electr&oacute;nico)</mat-label>
-              <input matInput [(ngModel)]="email" name="email" type="text" required>
+              <input matInput [(ngModel)]="email" type="text" required [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>email</mat-icon>
             </mat-form-field>
           </div>
@@ -75,7 +75,7 @@
         <div class="col-xs-12 center">
           <mat-form-field class="full-width" color="accent">
             <mat-label id="telefono">Tel&eacute;fono de contacto (preferiblemente celular)</mat-label>
-            <input matInput [(ngModel)]="telefono" name="telefono" type="text" required>
+            <input matInput [(ngModel)]="telefono" type="text" required [ngModelOptions]="{standalone: true}">
             <mat-icon matSuffix>call</mat-icon>
           </mat-form-field>
         </div>
@@ -84,7 +84,7 @@
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="ciudad">Ciudad</mat-label>
-              <input matInput [(ngModel)]="ciudad" name="ciudad" type="text">
+              <input matInput [(ngModel)]="ciudad" type="text" [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>public</mat-icon>
             </mat-form-field>
           </div>
@@ -92,7 +92,7 @@
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="direccion">Direcci&oacute;n</mat-label>
-              <input matInput [(ngModel)]="direccion" name="direccion" type="text">
+              <input matInput [(ngModel)]="direccion" type="text" [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>edit_location</mat-icon>
             </mat-form-field>
           </div>
@@ -100,7 +100,7 @@
           <div class="col-xs-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="info">Info extra (grado, cargo, intereses, etc.)</mat-label>
-              <textarea matInput rows="2" [(ngModel)]="info"></textarea>
+              <textarea matInput rows="2" [(ngModel)]="info" [ngModelOptions]="{standalone: true}"></textarea>
               <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
             </mat-form-field>
           </div>
@@ -110,8 +110,8 @@
             Debido a sus privilegios Administrativos, &eacute;ste nuevo usuario se crear&aacute;
             de una vez con ESTATUS = 'ACTIVO'; a diferencia de la Solicitud de 
             nueva cuenta Profit Takers (en la p&aacute;gina de Login) la cual debe
-            ser Activada por alg&uacute;n Administrador (si no dichos usuarios permanecer&aacute;n en 
-            estatus 'Inactivo' 
+            ser Activada por alg&uacute;n Administrador (de lo contrario dichos 
+            usuarios permanecer&aacute;n en estatus 'Inactivo' 
             y no podr&aacute;n ingresar al Sistema).
             <br/><br/>
           </div>
