--- a/src/app/academia/pago/pago.component.html
+++ b/src/app/academia/pago/pago.component.html
@@ -33,7 +33,7 @@
           <div class="col-md-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label>Banco/Cuenta en la que realiz&oacute; la consignaci&oacute;n</mat-label>
-              <mat-select [(ngModel)]="banco" (selectionChange)="selectedContract(banco)" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la calse .mat-select-value -->
+              <mat-select [(ngModel)]="banco" (selectionChange)="selectedContract(banco)" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la clase .mat-select-value -->
                 <mat-option value="A">Bancolombia - Cta. Cte. 123465798</mat-option>
                 <mat-option value="B">Banco de Bogotá - Cta. Ah. 789789456</mat-option>
               </mat-select>
