--- a/src/app/admin/create-contract/create-contract.component.html
+++ b/src/app/admin/create-contract/create-contract.component.html
@@ -54,7 +54,7 @@
               <br/>
               <mat-form-field class="full-width" color="accent">
                 <mat-label>Cuenta: Elegir una</mat-label>
-                <mat-select [(ngModel)]="account" (selectionChange)="selectedAccount(account)" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la calse .mat-select-value -->
+                <mat-select [(ngModel)]="account" (selectionChange)="selectedAccount(account)" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la clase .mat-select-value -->
                   <mat-option value="A001">Cuenta A001 - descripcion</mat-option>
                   <mat-option value="A002">Cuenta A002 - descripcion</mat-option>
                   <mat-option value="A003">Cuenta A003 - descripcion</mat-option>
