--- a/src/app/admin/create-contract/dialog-modal-add-investor.html
+++ b/src/app/admin/create-contract/dialog-modal-add-investor.html
@@ -29,7 +29,7 @@
       <div class="col-xs-12 center">
         <mat-form-field class="full-width" color="accent">
           <mat-label>Elegir un Inversionista</mat-label>
-          <mat-select [(ngModel)]="inv_person" (selectionChange)="selectedInvestor(investor)" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la calse .mat-select-value -->
+          <mat-select [(ngModel)]="inv_person" (selectionChange)="selectedInvestor(investor)" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la clase .mat-select-value -->
             <mat-option value="A001">Doctor Strange</mat-option>
             <mat-option value="A002">Iron man</mat-option>
             <mat-option value="A003">Thor son of Odin</mat-option>
