--- a/src/app/admin/create-trading/create-trading.component.html
+++ b/src/app/admin/create-trading/create-trading.component.html
@@ -48,7 +48,7 @@
             <br/>
             <mat-form-field class="full-width" color="accent">
               <mat-label>Cuenta: Elegir una</mat-label>
-              <mat-select [(ngModel)]="Cuenta" (selectionChange)="selectedContract(Cuenta)" required><!-- el color de letra lo da la calse .mat-select-value -->
+              <mat-select [(ngModel)]="Cuenta" (selectionChange)="selectedContract(Cuenta)" required><!-- el color de letra lo da la clase .mat-select-value -->
                 <mat-option value="A">Cuenta C001 - descripcion</mat-option>
                 <mat-option value="B">Cuenta C002 - descripcion</mat-option>
                 <mat-option value="C">Cuenta C003 - descripcion</mat-option>
